--- a/AppReservaciones/modificacionUsuario.html
+++ b/AppReservaciones/modificacionUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ES">
+<html lang="ES" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="./estilo/estilo.css">
     <meta charset="UTF-8">
@@ -12,12 +12,12 @@
 </head>
 <body class="cuerpo">
     <header class="header">
-        <img src="./img/fondoHotel.jpg" width=100% height=200%>
-        <div class="perfil">
-            <img src="./img/logoHotel.png">
-            <h1 class="titulo">Hotel CUH</h1>
-        </div>
-    </header>
+      <img th:src="@{/img/fondoHotel.jpg}" width=100% height=200%>
+      <div class="perfil">
+          <img th:src="@{/img/logoHotel.png}">
+          <h1 th:text="${negocio.nombre}" class="titulo">Hotel CUH</h1>
+      </div>
+  </header>
     <div class="navegacion">
         <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -34,32 +34,34 @@
   </div>
   <div>
     <div class="input-group barra-busqueda">
+      <form class="form-horizontal " action="#" th:action="@{/buscar}">
         <label class="control-label col-sm-2" for="buscar"><i class="fa-sharp fa-solid fa-user"></i> Buscar ID de Usuario</label>
-        <input type="number" class="form-control rounded" name="buscar" placeholder="Indique el ID del usuario a modificar" aria-label="Search" aria-describedby="search-addon" />
+        <input type="number" class="form-control rounded" id="idbuscar" name="idbuscar" placeholder="Indique el ID del usuario a modificar" aria-label="Search" aria-describedby="search-addon" />
         <button type="button" class="btn btn-outline-primary">Buscar Usuario</button>
+      </form>
       </div>
 <br>
   </div>
 <div class="formulario row">
-    <form class="form-horizontal " action="/gestionar.php">
+    <form class="form-horizontal " action="#" th:action="@{/usuariomodif}">
         <div class="form-group row col-xs-2">
           <label class="control-label col-sm-2" for="id">Identificador de usuario:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="id" placeholder="El identificador del usuario">
+            <input type="text" class="form-control" id="id" name="id" placeholder="El identificador del usuario">
           </div>
         </div>
         <br>
         <div class="form-group row col-xs-2">
           <label class="control-label col-sm-2" for="nombre"><i class="fa-sharp fa-solid fa-user"></i> Nombre del Usuario:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del usuario">
+            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese el nombre del usuario">
           </div>
         </div>
         <br>
         <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="correo">Correo del Usuario</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="correo" name="descripcion" placeholder="Ingrese el correo del usuario"></input>
+                <input type="email" class="form-control" id="correo" name="correo" placeholder="Ingrese el correo del usuario"></input>
 
             </div>
           </div>
@@ -67,24 +69,23 @@
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="telefono">Telefono de usuario:</label>
             <div class="col-sm-10">
-              <input type="tel" class="form-control" id="telefono" placeholder="Indique el número de teléfono del usuario">
+              <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="Indique el número de teléfono del usuario">
             </div>
           </div>
           <br>
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="nacimiento">Fecha de Nacimiento</label>
             <div class="col-sm-10">
-              <input type="date" class="form-control" id="nacimiento" placeholder="Indique su fecha de nacimiento">
+              <input type="date" class="form-control" id="nacimiento" name="nacimiento" placeholder="Indique su fecha de nacimiento">
             </div>
           </div>
           <br>
           <label for="cars">Seleccione el rol del usuario</label>
 
           <select name="cars" id="cars" >
-             <option value="volvo"></option>
-            <option value="volvo">Administrador</option>
-            <option value="saab">Gestor</option>
-            <option value="mercedes">Cliente</option>
+             <option th:each="rol : ${roles}" th:value="${rol.id}"
+             th:text="${rol.nombre}"></option>
+
           
           </select>
           
