--- a/AppReservaciones/gestion.html
+++ b/AppReservaciones/gestion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ES">
+<html lang="ES" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="./estilo/estilo.css">
     <meta charset="UTF-8">
@@ -12,12 +12,12 @@
 </head>
 <body class="cuerpo">
     <header class="header">
-        <img src="./img/fondoHotel.jpg" width=100% height=200%>
-        <div class="perfil">
-            <img src="./img/logoHotel.png">
-            <h1 class="titulo">Hotel CUH</h1>
-        </div>
-    </header>
+      <img th:src="@{/img/fondoHotel.jpg}" width=100% height=200%>
+      <div class="perfil">
+          <img th:src="@{/img/logoHotel.png}">
+          <h1 th:text="${negocio.nombre}" class="titulo">Hotel CUH</h1>
+      </div>
+  </header>
     <div class="navegacion">
       <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -32,18 +32,18 @@
 <h2>Gestion de Espacio</h2>
 </div>
 <div class="formulario row">
-    <form class="form-horizontal " action="/gestionar.php">
+    <form class="form-horizontal " action="#" th:action="@{/gestionar}">
         <div class="form-group row col-xs-2">
           <label class="control-label col-sm-2" for="id">Identificador:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="id" placeholder="El identificador del espacio">
+            <input type="text" class="form-control" id="id" name="id" placeholder="El identificador del espacio">
           </div>
         </div>
         <br>
         <div class="form-group row col-xs-2">
           <label class="control-label col-sm-2" for="nombre"><i class="fa-sharp fa-solid fa-user"></i> Nombre del espacio:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del espacio">
+            <input type="text" class="form-control" id="nombre" name="name" placeholder="Ingrese el nombre del espacio">
           </div>
         </div>
         <br>
@@ -58,21 +58,21 @@
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="cupo_max">Cupo Máximo:</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" id="cupo_max" placeholder="Cantidad máxima de asistentes">
+              <input type="number" class="form-control" id="cupo_max" name="cupo_max" placeholder="Cantidad máxima de asistentes">
             </div>
           </div>
           <br>
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="cupo_disp">Cupo Disponible:</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" id="cupo_disp" placeholder="Cantidad restante de asistentes">
+              <input type="number" class="form-control" id="cupo_disp" name="cupo_disp" placeholder="Cantidad restante de asistentes">
             </div>
           </div>
           <br>
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="costoxdia">Costo x Día:</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" id="costoxdia" placeholder="Costo por evento o día reservado">
+              <input type="number" class="form-control" id="costoxdia" name="costoxdia" placeholder="Costo por evento o día reservado">
             </div>
           </div>
           <br>
@@ -86,18 +86,18 @@
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="gestor">Gestor:</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="gestor" placeholder="Nombre de gestor asignado actualmente a espacio">
+              <input type="text" class="form-control" id="gestor" name="gestor" placeholder="Nombre de gestor asignado actualmente a espacio">
             </div>
           </div>
           <br>
           <div class="form-group row col-xs-2">
             <label class="control-label col-sm-2" for="tipoevento">Tipo de Evento</label>
             <div class="row col-xs-6">
-                <input type="radio" id="html" name="tipoevento" value="Fiesta Infantil">
+                <input type="radio" id="tipoevento" name="tipoevento" value="Fiesta Infantil">
                 <label for="html">Fiesta Infantil</label><br>
-                <input type="radio" id="css" name="tipoevento" value="Fiesta Familiar">
+                <input type="radio" id="tipoevento" name="tipoevento" value="Fiesta Familiar">
                 <label for="css">Fiesta Familiar</label><br>
-                <input type="radio" id="javascript" name="tipoevento" value="Concierto">
+                <input type="radio" id="tipoevento" name="tipoevento" value="Concierto">
                 <label for="javascript">Concierto</label>
             </div>
           </div>
